Fix the social icons touching the footer on mobile view

--- a/src/less/social-icons.less
+++ b/src/less/social-icons.less
@@ -1,5 +1,6 @@
 .social-icons {
   text-align: center;
+  margin-bottom: 20px;
 
   a {
     display: inline-block;
